@@ -6,6 +6,8 @@
 
 	* main/Utils/TextUtils.class.php: hex2Binary() added.
 
+	* main/Math/FileRandomSource.class.php: added.
+
 2007-08-15	Denis M. Gabaidulin
 
 	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator filter
